# RAG-Format

./: .gitignore  app.py  csv_generator.py  link_extractor.py  models.py  pdf_generator.py  push_to_github.sh  pyproject.toml  replit.md  routes.py  web_scraper.py  web_scraper_fast.py
attached_assets/: Pasted--Integrating-Cloudinary-into-your-Python-based-Replit-project-Below-is-a-copy-and-paste-recipe-1754763644230_1754763644231.txt  Pasted--Plug-in-a-Python-upload-endpoint-for-Imgur-Below-is-a-concise-drop-in-snippet-you-can-paste-int-1754763214843_1754763214843.txt  Pasted--Public-ENVIRONMENT-No-Environment-LAYOUT-Double-Column-LANGUAGE-cURL-cURL-Imgur-API-Introduction--1754763116957_1754763116957.txt  Pasted--This-is-an-image-of-the-Publish-button-Screenshot-2025-08-07-at-9-04-36-AM-png-https-i-posti-1754760558641_1754760558641.txt  Pasted-2025-05-29-15-20-53-85-c85197fd-User--1748546492524.txt  Pasted-2025-08-09-19-33-27-0000-7062-INFO-Using-worker-sync-2025-08-09-19-33-27-0000-7073-INFO-1754768058263_1754768058263.txt  Pasted-2025-08-09-19-36-33-0000-7485-INFO-Starting-gunicorn-23-0-0-2025-08-09-19-36-33-0000-7485--1754768337340_1754768337340.txt  Pasted-EBUG-urllib3-connectionpool-https-www-schools-nyc-gov-443-GET-enrollment-enroll-grade-by-grade-d-1754767815704_1754767815704.txt  Url_and_Title_Scrape.ipynb
instance/: webscraper.db
static/css/: style.css
static/js/: main.js
templates/: base.html  error.html  history.html  index.html  result.html  upload_images.html
