[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "cloudinary>=1.44.1",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "pillow>=11.2.1",
    "reportlab>=4.4.1",
    "requests>=2.32.3",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
]
